--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,13 +8,29 @@
 
 .nav {
   overflow: hidden;
-  background-color: #000080;
+  background-color: #77bca9;
+}
+
+.nav-link-home {
+  float: left;
+  color: #eb9019;
+  background-color: #77bca9;
+  text-align: center;
+  padding: 24px 10px;
+  text-decoration: none;
+  font-size: 15px;
+
+  /* these last two make the logout button in
+  the nav bar look like another link */
+  border:none;
+  cursor: pointer;
+  outline:0;
 }
 
 .nav-link {
   float: left;
   color: #f2f2f2;
-  background-color: #000080;
+  background-color: #77bca9;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -28,9 +44,14 @@
 }
 
 .nav-link:hover {
-  background-color: #000060;
+  background-color: #77bca9;
 }
 
 .nav-right {
   float: right;
+}
+
+.imgicon {
+  width:  70px;
+  height: 70px;
 }
