--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -52,7 +52,8 @@ img {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 150px;
+    width: 100px;
+    height: 100px;
   }
 
   .dashboard {
