--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -50,10 +50,11 @@ input {
 
 img {
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 5px 5px 0 0;
     padding: 5px;
     width: 100px;
     height: 100px;
+
   }
 
   .dashboard {
@@ -64,9 +65,9 @@ img {
     padding-left: 10px;
 }
 
-.borderdashboard {
+/* .borderdashboard {
     border: 1px solid black;
-}
+} */
 
 p {
     font-style: Bookman, URW Bookman L, serif;
@@ -83,4 +84,53 @@ p {
     content: "";
     display: table;
     clear: both;
+  }
+
+  /* .loginBackground {
+    background-image: url("/images/sakura.png");
+    background-repeat: repeat;
+  } */
+
+  .deletebtn {
+    background-color: #f44336;
+    font-size: 11px;
+    border-radius: 12px;
+    color: white;
+  }
+
+  .editbtn {
+    background-color: lightseagreen;
+    font-size: 11px;
+    border-radius: 12px;
+    color: white;
+  }
+
+  .saveupdatebtn {
+    background-color: green;
+    font-size: 11px;
+    border-radius: 12px;
+    color: white;
+  }
+
+  .card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
+
+  body {
+    background: url("/images/regal.png");
+    background-repeat: repeat;
   }
