--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -117,6 +117,11 @@ p {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
+    height: 100%;
+    padding: 8px;
+    background-color: rgba(255,255,255,0.8);
+    box-sizing: border-box;
+    border: 2px solid white;
 
   }
   
@@ -127,7 +132,7 @@ p {
   
   /* Add some padding inside the card container */
   .container {
-    padding: 2px 16px;
+    padding: 8px 16px;
   }
 
   body {
