--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,14 +8,14 @@ body {
     margin: 50px;
 }
 
-/* form {
+.form {
     background-color: #dbd5d5;
     width: 30%;
     height: 250px;
     margin: 20px auto;
     padding: 25px;
     border-radius: 2px;
-} */
+}
 
 input {
     margin: 5px;
@@ -50,10 +50,11 @@ input {
 
 img {
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 5px 5px 0 0;
     padding: 5px;
     width: 100px;
     height: 100px;
+
   }
 
   .dashboard {
@@ -64,7 +65,84 @@ img {
     padding-left: 10px;
 }
 
-.borderdashboard {
+/* .borderdashboard {
     border: 1px solid black;
+} */
+
+p {
+    font-style: Bookman, URW Bookman L, serif;
+    font-size: 12px;
 }
 
+.column {
+    float: left;
+    width: 50%;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  /* .loginBackground {
+    background-image: url("/images/sakura.png");
+    background-repeat: repeat;
+  } */
+
+  .deletebtn {
+    background-color: #f44336;
+    font-size: 11px;
+    border-radius: 12px;
+    color: white;
+  }
+
+  .editbtn {
+    background-color: lightseagreen;
+    font-size: 11px;
+    border-radius: 12px;
+    color: white;
+  }
+
+  .saveupdatebtn {
+    background-color: green;
+    font-size: 11px;
+    border-radius: 12px;
+    color: white;
+  }
+
+  .download-table-xls-button {
+    background-color: #ffec73;
+    font-size: 15px;
+    border-radius: 20px;
+    color: black;
+  }
+
+  .card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    height: 100%;
+    padding: 8px;
+    background-color: rgba(255,255,255,0.8);
+    box-sizing: border-box;
+    border: 2px solid white;
+
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 8px 16px;
+  }
+
+  body {
+    background: url("/images/regal.png");
+    background-repeat: repeat;
+  }
