--- a/src/components/MasterData/MasterData.css
+++ b/src/components/MasterData/MasterData.css
@@ -1,3 +1,14 @@
+table {
+  background-color: rgba(255,255,255,0.8);
+
+}
+
 table, th, td {
     border: 1px solid black;
   }
+
+tr {
+  font-style: Bookman, URW Bookman L, serif;
+  font-size: 13px;
+
+}
